crates/eg-plan/tests/snapshots/plan_snapshots__optimizer_broad_vector_first.snap
---
source: crates/eg-plan/tests/plan_snapshots.rs
expression: render(&brd)
---
[
    Scan {
        label: "Doc",
    },
    Rank {
        query: [
            1.0,
            0.0,
            0.0,
            0.0,
        ],
    },
    Filter {
        preds: [
            GtNum {
                prop: "year",
                n: 2022.0,
            },
        ],
    },
]
