crates/eg-plan/tests/snapshots/plan_snapshots__optimizer_fuse_branches_reordered.snap
---
source: crates/eg-plan/tests/plan_snapshots.rs
expression: render(&optimized.ops)
---
[
    Scan {
        label: "Doc",
    },
    FuseRrf {
        branches: [
            [
                RankMentions,
            ],
            [
                Rank {
                    query: [
                        1.0,
                        0.0,
                        0.0,
                        0.0,
                    ],
                },
            ],
        ],
        k: 0.0,
    },
]
