crates/eg-plan/tests/snapshots/plan_snapshots__optimizer_selective_filter_pushed.snap
---
source: crates/eg-plan/tests/plan_snapshots.rs
expression: render(&sel)
---
[
    Scan {
        label: "Doc",
    },
    Filter {
        preds: [
            GtNum {
                prop: "year",
                n: 2022.0,
            },
        ],
    },
    Rank {
        query: [
            1.0,
            0.0,
            0.0,
            0.0,
        ],
    },
]
