crates/eg-plan/tests/snapshots/plan_snapshots__plan_asof_transaction_axis.snap
---
source: crates/eg-plan/tests/plan_snapshots.rs
expression: render(&parsed.ops)
---
[
    Scan {
        label: "Event",
    },
    AsOf {
        ts: 150.0,
        axis: Transaction,
    },
]
