crates/eg-plan/tests/snapshots/plan_snapshots__plan_classic_filter_traverse_rank.snap
---
source: crates/eg-plan/tests/plan_snapshots.rs
expression: render(&parsed.ops)
---
[
    Scan {
        label: "Doc",
    },
    Filter {
        preds: [
            GtNum {
                prop: "year",
                n: 2024.0,
            },
        ],
    },
    Traverse {
        rel: "CITES",
        min: 1,
        max: 2,
    },
    Rank {
        query: [
            1.0,
            0.0,
            0.0,
            0.0,
        ],
    },
    Limit {
        k: 10,
    },
]
