crates/eg-plan/tests/snapshots/plan_snapshots__plan_scan_inline_where.snap
---
source: crates/eg-plan/tests/plan_snapshots.rs
expression: render(&parsed.ops)
---
[
    Scan {
        label: "Doc",
    },
    Filter {
        preds: [
            Eq {
                prop: "lang",
                value: "en",
            },
        ],
    },
]
